--- a/.github/workflows/fetch-forms.yml
+++ b/.github/workflows/fetch-forms.yml
@@ -2,8 +2,8 @@ name: Fetch daily greyhound form PDFs
 
 on:
   schedule:
-    # Runs every day at 08:00 AEST (UTC+10) ≈ 22:00 UTC previous day
-    - cron: "0 22 * * *"
+    - cron: "0 22 * * *"   # ~08:00 AEST (UTC+10)
+    - cron: "0 21 * * *"   # ~08:00 AEDT (UTC+11)
   workflow_dispatch: {}
 
 permissions:
@@ -12,23 +12,26 @@ permissions:
 jobs:
   fetch:
     runs-on: ubuntu-latest
+    env:
+      TZ: Australia/Sydney
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Set up Python
+      - uses: actions/checkout@v4
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - name: Install deps
-        run: pip install requests
-
-      - name: Run fetcher
-        run: python fetch_forms.py
-
-      - name: Commit new PDFs
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "chore(forms): daily fetch $(date -u +'%Y-%m-%d')"
-          file_pattern: "forms/**.pdf"
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run fetch script
+        run: |
+          # adjust to your actual fetch script if different
+          python fetch_forms.py
+      - name: Commit forms
+        run: |
+          git config user.email "actions@github.com"
+          git config user.name "github-actions[bot]"
+          git add forms || true
+          git commit -m "chore(forms): add daily PDFs" || echo "nothing to commit"
+          git push
