--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
+# Core data + ML
 pandas>=2.2
 numpy>=1.26
 scikit-learn>=1.4
+
+# PDF parsing
 pdfplumber>=0.11
 PyMuPDF>=1.24
 camelot-py[cv]>=0.11
+
+# Date + logging
 python-dateutil>=2.9
 loguru>=0.7
+
+# Web scraping / fetching
+requests>=2.31
+beautifulsoup4>=4.12
+lxml>=4.9
