--- a/.github/workflows/fetch-forms.yml
+++ b/.github/workflows/fetch-forms.yml
@@ -1,10 +1,15 @@
 name: Fetch daily greyhound form PDFs
 
 on:
+  workflow_dispatch:
+    inputs:
+      date:
+        description: "Run date (YYYY-MM-DD or 'today')"
+        required: false
+        default: today
   schedule:
-    - cron: "0 22 * * *"   # ~08:00 AEST (UTC+10)
-    - cron: "0 21 * * *"   # ~08:00 AEDT (UTC+11)
-  workflow_dispatch: {}
+    # Runs every day at 06:05 Sydney time ( = 20:05 UTC the previous day )
+    - cron: "5 20 * * *"
 
 permissions:
   contents: write
@@ -16,22 +21,42 @@ jobs:
       TZ: Australia/Sydney
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v5
+
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run fetch script
+        env:
+          RUN_DATE: ${{ github.event.inputs.date || 'today' }}
         run: |
-          # adjust to your actual fetch script if different
-          python fetch_forms.py
-      - name: Commit forms
+          set -e
+          mkdir -p forms
+          echo "Fetching forms for: ${RUN_DATE}"
+          if [ -f fetch_forms.py ]; then
+            python fetch_forms.py --date "${RUN_DATE}" --out forms
+          elif [ -f src/fetch_forms.py ]; then
+            python -m src.fetch_forms --date "${RUN_DATE}" --out forms
+          else
+            echo "❌ fetch_forms.py not found (root or src/)."
+            exit 1
+          fi
+          echo "Downloaded files:"
+          ls -l forms || true
+
+      - name: Commit PDFs (if any)
         run: |
-          git config user.email "actions@github.com"
-          git config user.name "github-actions[bot]"
-          git add forms || true
-          git commit -m "chore(forms): add daily PDFs" || echo "nothing to commit"
-          git push
+          if [[ -n "$(git status --porcelain forms)" ]]; then
+            git config user.name  "actions-user"
+            git config user.email "actions@github.com"
+            git add forms
+            git commit -m "Add today's form PDFs"
+            git push
+          else
+            echo "No new PDFs to commit."
+          fi
