--- a/.github/workflows/bets.yml
+++ b/.github/workflows/bets.yml
@@ -1,18 +1,11 @@
 name: Make Bets
 
 on:
-  workflow_dispatch: {}
-  # (optional) run every day at 06:05 AEST
-  # schedule:
-  #   - cron: "05 20 * * *"
-
-permissions:
-  contents: write
+  workflow_dispatch:
 
 jobs:
   make-bets:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -25,45 +18,39 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # Build probabilities so reports/latest/probabilities.csv exists
       - name: Run daily model (build probabilities.csv)
         run: python -m src.run_daily
 
-      # Fetch Odds API prices using the new odds_client args
       - name: Fetch odds (Odds API)
         env:
           ODDS_API_KEY: ${{ secrets.ODDS_API_KEY }}
         run: |
           mkdir -p data/odds
           python -m src.odds_client \
-            --sport greyhounds \
+            --sport greyhound_racing_aus \
             --regions au \
             --markets h2h \
             --date today \
             --out-dir data/odds \
             --api-key "$ODDS_API_KEY"
 
-      # Join probabilities to prices and write bets.csv
       - name: Make bets (produce bets.csv)
         run: |
-          mkdir -p reports/latest
           python -m src.make_bets \
             --probs reports/latest/probabilities.csv \
-            --odds  data/odds \
-            --out   reports/latest/bets.csv
+            --odds data/odds \
+            --out reports/latest/bets.csv
 
-      # Save as GitHub Actions artifact (easy to download)
       - name: Upload bets artifact
         uses: actions/upload-artifact@v4
         with:
           name: bets-report
           path: reports/latest/bets.csv
 
-      # Commit bets.csv back to the repo
       - name: Commit bets.csv back to repo
         run: |
-          git config user.name "actions-user"
-          git config user.email "actions@github"
-          git add reports/latest/bets.csv || true
-          git commit -m "Add bets report (CI)" || echo "No changes to commit"
+          git config --local user.name "actions-user"
+          git config --local user.email "actions@github.com"
+          git add reports/latest/bets.csv
+          git commit -m "Add latest bets report"
           git push
